fix checkbox alignment and list margins on WR page

--- a/src/theme/sass-partials/_checkbox.scss
+++ b/src/theme/sass-partials/_checkbox.scss
@@ -53,8 +53,8 @@
     background: url("/assets/imgs/checkmark.png") no-repeat;
     background-size: $checkmark-size $checkmark-size;
     position: absolute;
-    left: $checkmark-offset;
-    top: $checkmark-offset;
+    left: 8%;
+    top: 25%;
     width: $checkmark-size;
     height: $checkmark-size;
   }
