--- a/src/theme/sass-partials/_spacing.scss
+++ b/src/theme/sass-partials/_spacing.scss
@@ -37,3 +37,8 @@
 .padding-x-5 {
   padding: 0 5px;
 }
+
+ul {
+  margin-block-start: 22px;
+  margin-block-end: 22px;
+}
